# mojort

./: .gitignore  .gitmodules  LICENSE  README.md  configure.sh  pyproject.toml  requirements.txt  rundocker.py  style.sh
benchmarks/c/: knmp.c  mandelbrot.c  matmul.c  sleep_interval.c
benchmarks/cpp/: knmp.cpp  mandelbrot.cpp  matmul.cpp  n-body.cpp  nbody.txt
benchmarks/examples/: mandel.mojo  mandel.py
benchmarks/mojo/: cyclictest.mojo  cyclictest.py  knmp.mojo  loop_constant.mojo  mandelbrot.mojo  matmul.mojo  matmul_gpu.mojo  n-body.mojo  sleep_interval.mojo
benchmarks/rust/: knmp.rs  mandelbrot.rs  matmul.rs
benchmarks/rust/knmp/: Cargo.toml
benchmarks/rust/knmp/src/: main.rs
benchmarks/rust/mandelbrot/: Cargo.toml
benchmarks/rust/mandelbrot/src/: main.rs
benchmarks/rust/matmul/: Cargo.toml
mojort/benchmarks/: kmp.py  mandelbrot.py  matmul.py  matmul_gpu.py  microbench.py  size.py
mojort/campaigns/: cyclictest.py  gpu.py  knmp.py  latencytest.py  mandelbrot.py  matmul.py  microbenches.py  n-bod.py  size.py
mojort/runners/: __init__.py
mojort/studies/embedded/kernel/: CMakeLists.txt  gdb.script  linker.ld
mojort/studies/embedded/kernel/src/boot/: start.s  vectors.s
mojort/studies/embedded/kernel/src/drivers/: context.s  gic.c  timer.c  uart.c  uart.mojo
mojort/studies/embedded/kernel/src/include/: console.h  context.h  scheduler.h  types.h
mojort/studies/embedded/kernel/src/include/drivers/: gic.h  timer.h  uart.h
mojort/studies/embedded/kernel/src/kernel/: isr.s  main.c  scheduler.c  sum.c  sum.mojo
mojort/studies/embedded/kernel/src/tasks/: task1.c  task2.c  ustart.s
mojort/studies/embedded/objects/: build.sh  main.c  mylib.mojo
mojort/studies/robotics/: robot.mojo  robotmod.py  ursim_container.py
mojort/utils/: __init__.py
notebooks/: charts.ipynb
